...

        <View style={styles.buttons}>
          <Pressable style={[styles.button, styles.primary]} onPress={goSignUp}>
            <Text style={styles.buttonText}>Get Started</Text>
          </Pressable>
          <Pressable style={[styles.button, styles.secondary]} onPress={goSignIn}>
            <Text style={styles.buttonText}>Log In</Text>
          </Pressable>
        </View>
        <StatusBar style="auto" />
      </View>
    </SafeAreaView>
  );
...
